# tears

./: .gitignore  Cargo.toml  README.md  about.hbs  deny.toml
.github/workflows/: ci.yml  pages.yml
crate/tears/: Cargo.toml
crate/tears/src/: lib.rs  mood.rs  suggestion.rs  trust.rs
webapp/: Cargo.toml  index.html
webapp/src/: app.rs  lib.rs  main.rs
webapp/style/: tailwind.config.js  tears.css
